--- a/themes/ampas/layouts/partials/head.html
+++ b/themes/ampas/layouts/partials/head.html
@@ -10,10 +10,10 @@
 	{{ .Hugo.Generator }}
 
 	{{ "<!-- CSS -->" | safeHTML }}
-	<link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css">
+	<link rel="stylesheet" href="{{ .Site.BaseURL }}/css/main.css">
 
 	{{ "<!--Favicon-->" | safeHTML }}
-	<link rel="shortcut icon" href="{{ .Site.BaseURL }}favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="{{ .Site.BaseURL }}/favicon.png" type="image/x-icon">
 
 	{{ "<!-- RSS -->" | safeHTML }}
 	{{ if .RSSLink -}}
