--- a/themes/ampas/layouts/partials/head.html
+++ b/themes/ampas/layouts/partials/head.html
@@ -20,7 +20,7 @@
 		<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 		<link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
 	{{- end }}
-
+	<meta name="google-site-verification" content="xDEUsjhzZqb3JYW7pnDMEebdTfiIyYN289mliHxbetw" />
 	{{ "<!-- Font Awesome -->" | safeHTML }}
 	<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
