--- a/themes/ampas/layouts/_default/single.html
+++ b/themes/ampas/layouts/_default/single.html
@@ -3,7 +3,7 @@
 	{{ if and (isset .Params "featureimage") (not (eq .Params.featureimage "")) -}}
 	<article class="feature-image">
 		<header style="background-image: url('{{ .Site.BaseURL }}{{ .Params.featureimage }}')">
-			<h1 class="title">{{ .Title }}</h1>
+			<h1 itemprop="name" class="title">{{ .Title }}</h1>
 		</header>
 	{{- else -}}
 	<article>
