--- a/themes/ampas/layouts/partials/head.html
+++ b/themes/ampas/layouts/partials/head.html
@@ -5,7 +5,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	{{ with .Site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
-	{{ with .Site.Params.description }}<meta name="description" content="{{ . }}">{{ end }}
+	{{ if not .IsHome -}}
+	<meta name="description" content="{{ .Summary }}">
+	{{- else -}}
+		<meta name="description" content="{{ .Site.Params.description }}">
+	{{- end }}
 	{{ with .Site.Params.keywords }}<meta name="keywords" content="{{ . }}">{{ end }}
 	{{ .Hugo.Generator }}
 
