--- a/themes/ampas/layouts/partials/head.html
+++ b/themes/ampas/layouts/partials/head.html
@@ -12,7 +12,13 @@
 	{{- end }}
 	{{ with .Site.Params.keywords }}<meta name="keywords" content="{{ . }}">{{ end }}
 	{{ .Hugo.Generator }}
-
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+	  (adsbygoogle = window.adsbygoogle || []).push({
+		google_ad_client: "ca-pub-4913564625097715",
+		enable_page_level_ads: true
+	  });
+	</script>
 	{{ "<!-- CSS -->" | safeHTML }}
 	<link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css">
 
