--- a/themes/owo/layouts/_default/list.html
+++ b/themes/owo/layouts/_default/list.html
@@ -1,10 +1,10 @@
 {{ partial "header.html" . }}
-	<main>
-		{{ $paginator := .Paginate (where .Data.Pages "Type" "posts") }}
-		{{ range $paginator.Pages }}
-			{{ partial "summary.html" . }}
+<div class="container">
+	<main class="index-main">	
+		{{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
+		{{ range $paginator.Pages }} {{ partial "summary.html" .}}
 		{{ end }}
 		{{ partial "pagination.html" . }}
 	</main>
-{{ partial "sidebar.html" . }}
-{{ partial "footer.html" . }}
+	{{ partial "footer.html" . }}
+</div>
