--- a/themes/solit/layouts/_default/baseof.html
+++ b/themes/solit/layouts/_default/baseof.html
@@ -47,7 +47,14 @@
 
     <header class="l-header">
       <div class="h-logo p-logo">
-        <a href="{{ .Site.BaseURL }}" class="h-logo">{{ .Site.Title }}</a>
+        <center>
+          <a href="{{ .Site.BaseURL }}">
+            <div class="img-header">
+              <img src="/images/img-header.jpg" alt="">
+            </div>
+            {{ .Site.Title }}
+          </a>
+        </center>
       </div>
       {{ partial "nav.html" .}}
     </header>
