--- a/themes/solit/layouts/partials/meta.html
+++ b/themes/solit/layouts/partials/meta.html
@@ -2,7 +2,7 @@
 <meta name="pinterest" content="nopin">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <meta name="theme-color" content="#263238">
-<link rel="icon" href="/favicon.png" type="image/gif" sizes="16x16">
+<link rel="icon" href="/logo.png" type="image/gif" sizes="16x16">
 {{ with .Site.Params.contact }}<meta name="contact" content="{{ . }}">{{ end }}
 {{ .Hugo.Generator }}
 
