--- a/themes/solit/layouts/404.html
+++ b/themes/solit/layouts/404.html
@@ -4,8 +4,10 @@
 <div class="l-container">
   <header class="p-page-title">
     <div class="content-inner">
-      <h1 class="title">{{ .Title }}</h1>
-      <p>You are looking for articles could not be found.</p>
+      <center style="height: 25em">
+        <h1 class="title">404</h1>
+        <p style="opacity: .4;">OwO</p>
+      </center>
     </div>
   </header>
 </div>
