--- a/themes/solit/layouts/404.html
+++ b/themes/solit/layouts/404.html
@@ -4,9 +4,9 @@
 <div class="l-container">
   <header class="p-page-title">
     <div class="content-inner">
-      <center style="height: 25em">
-        <h1 class="title">404</h1>
-        <p style="opacity: .4;">OwO</p>
+      <center>
+        <h1 class="title">{{ .Title }}</h1>
+        [owo](/404.jpg)
       </center>
     </div>
   </header>
