--- a/themes/solit/layouts/404.html
+++ b/themes/solit/layouts/404.html
@@ -6,7 +6,7 @@
     <div class="content-inner">
       <center>
         <h1 class="title">{{ .Title }}</h1>
-        [owo](/404.jpg)
+        <img src="/404.jpg" title="Not found owo" alt="">
       </center>
     </div>
   </header>
