--- a/themes/solit/layouts/_default/li.html
+++ b/themes/solit/layouts/_default/li.html
@@ -16,7 +16,7 @@
     <a href="{{ .Permalink }}" class="thumbnail" title="{{ .Title }}"></a>
   </header>
   <div class="content-inner">
-    <div class="article-body summary">{{ .Summary }}</div>
+    <div class="article-body summary">{{ .Summary }}...</div>
     <footer class="readmore"><a href="{{ .Permalink }}">READ MORE</a></footer>
   </div>
 </article>
